k8s/product-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: product-api
  name: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - image: product-api
        name: product-api
        livenessProbe:
          httpGet:
            path: /1
            port: 5001
        readinessProbe:
          httpGet:
            path: /1
            port: 5001
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
