k8s/product-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: product-api-service
  name: product-api-service
spec:
  ports:
  - name: tcp-5001
    port: 5001
    protocol: TCP
    targetPort: 5001
    nodePort: 30092
  selector:
    app: product-api
  type: NodePort
