k8s/product-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress-service
spec:
  rules:
  - host: product-api-service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product-api-service
            port:
              number: 5001
